GNOME Bugzilla – Bug 679781
Fix for libsoup deprecation
Last modified: 2019-02-22 09:29:24 UTC
* soup_message_headers_get() has been deprecated
Created attachment 218604 [details] [review] Fix for libsoup deprecations
Review of attachment 218604 [details] [review]: IIRC this happend a lot time ago, didn't we fix this already. It could be that we only fixed it in rygel. You want to bump the libsoup dependency at the same time.
Thanks. The libsoup dependency is already at 2.26.1 which is the version in which soup_message_headers_get_one() was introduced according to the docs. Pushed to master.