Fix for libsoup deprecations

* soup_message_headers_get() has been deprecated

https://bugzilla.gnome.org/show_bug.cgi?id=679781